Commit this stuff

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@ src: local("Noto Color Emoji"), local("Apple Color Emoji"), local("Segoe UI Emoj
 }
 :root {
 --text-color: #24292e;
---background-color: #ffffff;
---alt-background-color: #f6f8fa;
+background-color: #88b9ed;
+--alt-background-color: #030303;
 --link-color: #0366d6;
 --blockquote-text-color: #6a737d;
 --blockquote-border-color: #dfe2e5;
